--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -31,7 +31,7 @@
                                     <MenuItem onAction="#onSettingsSelected" text="%menu.settings"/>
                                     <SeparatorMenuItem mnemonicParsing="false"/>
                                     <MenuItem disable="true" text="%menu.feedback"/>
-                                    <MenuItem onAction="#onLinksAndHelp" text="%menu.discordHelp"/>
+                                    <MenuItem onAction="#onLinksAndHelp" text="%help.title"/>
                                     <SeparatorMenuItem mnemonicParsing="false"/>
                                     <MenuItem onAction="#onRevealLogFolder" text="%menu.revealLogFolder"/>
                                     <MenuItem onAction="#onRevealMapFolder" text="%menu.revealMapFolder"/>
