--- a/src/main/resources/theme/play/custom_games.fxml
+++ b/src/main/resources/theme/play/custom_games.fxml
@@ -19,13 +19,12 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="gamesRoot" alignment="TOP_CENTER"
-           xmlns="http://javafx.com/javafx/10.0.1" fx:controller="com.faforever.client.game.CustomGamesController">
+           xmlns="http://javafx.com/javafx/10.0.2" fx:controller="com.faforever.client.game.CustomGamesController">
     <children>
         <GridPane fx:id="gamesGridPane">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0"
-                                   prefWidth="300.0" fx:id="sidePaneColumn"/>
+                <ColumnConstraints fx:id="sidePaneColumn" hgrow="SOMETIMES" minWidth="300.0" prefWidth="300.0"/>
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints vgrow="NEVER"/>
@@ -34,7 +33,7 @@
             <children>
                 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
                     <children>
-                        <HBox>
+                        <HBox spacing="5.0">
                             <children>
                                 <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="ALWAYS">
                                     <children>
@@ -57,7 +56,8 @@
                                     </padding>
                                 </Button>
                                 <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false"
-                                              onAction="#onTableButtonClicked" text="%view.table">
+                                              onAction="#onTableButtonClicked" styleClass="game-list-type"
+                                              text="%view.table">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="viewToggleGroup"/>
                                     </toggleGroup>
@@ -66,7 +66,8 @@
                                     </graphic>
                                 </ToggleButton>
                                 <ToggleButton fx:id="tilesButton" minWidth="-Infinity" mnemonicParsing="false"
-                                              onAction="#onTilesButtonClicked" selected="true" text="%view.tiles"
+                                              onAction="#onTilesButtonClicked" selected="true"
+                                              styleClass="game-list-type" text="%view.tiles"
                                               toggleGroup="$viewToggleGroup">
                                     <graphic>
                                         <Label styleClass="icon" text=""/>
@@ -86,7 +87,7 @@
                     </content>
                 </ScrollPane>
                 <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308"
-                            maxWidth="1.7976931348623157E308" GridPane.rowIndex="1" prefWidth="10000"/>
+                            maxWidth="1.7976931348623157E308" prefWidth="10000" GridPane.rowIndex="1"/>
             </children>
         </GridPane>
     </children>
