Map Vault rules checkbox
Fix #1451

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -273,6 +273,21 @@
 
 /*******************************************************************************
  *                                                                             *
+ * Bad Highlighting                                                            *
+ *                                                                             *
+ ******************************************************************************/
+
+.bad {
+  -fx-text-fill: -bad;
+}
+
+.bad > .jfx-check-box {
+  -jfx-unchecked-color: -bad;
+
+}
+
+/*******************************************************************************
+ *                                                                             *
  * ScrollPane       		                                                       *
  *                                                                             *
  ******************************************************************************/
