--- a/src/main/resources/theme/vault/map/map_upload.fxml
+++ b/src/main/resources/theme/vault/map/map_upload.fxml
@@ -13,7 +13,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.String?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="mapUploadRoot" minHeight="100.0" minWidth="100.0" prefWidth="560.0" styleClass="dialog-window" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.map.MapUploadController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="mapUploadRoot" minHeight="100.0" minWidth="100.0" prefWidth="900.0"
+      styleClass="dialog-window" xmlns="http://javafx.com/javafx/8.0.141"
+      fx:controller="com.faforever.client.map.MapUploadController">
   <children>
       <VBox fx:id="mapInfoPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="100.0" spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
@@ -54,7 +56,14 @@
           <graphic>
               <JFXCheckBox fx:id="rankedCheckbox" mnemonicParsing="false" selected="true" />
           </graphic>
-        </Label>
+          </Label>
+          <Label fx:id="rulesLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                 text="%mapVault.upload.rules" wrapText="true">
+              <graphic>
+                  <JFXCheckBox fx:id="rulesCheckBox" mnemonicParsing="false"/>
+              </graphic>
+          </Label>
+          <JFXButton text="%mapVault.upload.openRules" onMouseClicked="#onShowRulesClicked"/>
         <ButtonBar prefHeight="40.0" prefWidth="200.0">
           <buttons>
               <JFXButton defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked" text="%mapVault.upload.uploadNow" />
