--- a/src/main/resources/theme/play/games_table.fxml
+++ b/src/main/resources/theme/play/games_table.fxml
@@ -12,7 +12,10 @@
                  text="%game.map"/>
     <TableColumn fx:id="gameTitleColumn" editable="false" minWidth="20.0" prefWidth="1000.0" text="%game.title"/>
     <TableColumn fx:id="playersColumn" editable="false" minWidth="20.0" prefWidth="50.0" text="%game.players"/>
-    <TableColumn fx:id="ratingColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.rating"/>
+      <TableColumn fx:id="averageRatingColumn" editable="false" minWidth="20.0" prefWidth="100.0"
+                   text="%game.averageRating"/>
+      <TableColumn fx:id="ratingRangeColumn" editable="false" minWidth="20.0" prefWidth="100.0"
+                   text="%game.ratingRange"/>
     <TableColumn fx:id="modsColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.mods"/>
     <TableColumn fx:id="hostColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.host"/>
     <TableColumn fx:id="coopMissionName" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.missionName"/>
