party system WIP

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -1099,7 +1099,8 @@
 }
 
 .card-playerReady {
-  -fx-background-color: #00400f;
+  -fx-background-color: #00400f !important;
+  -fx-effect: dropshadow(gaussian, #001f06, 6, 0.3, 1, 1) !important;
 }
 
 /***************** Rating change*****************/
