Reduce context menu text size
Fixes #1509

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -912,7 +912,7 @@
 /***************** Create game *****************/
 
 .game-title-input {
-  -fx-font-size: 2em;
+  -fx-font-size: 0.8cm;
 }
 
 /***************** Settings window *****************/
