--- a/src/main/resources/theme/login.fxml
+++ b/src/main/resources/theme/login.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -16,66 +17,67 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import java.lang.String?>
-<VBox fx:id="loginRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="login-root"
-      xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="loginRoot" maxHeight="1.7976931348623157E308"
+      maxWidth="1.7976931348623157E308" styleClass="login-root" xmlns="http://javafx.com/javafx/11.0.1"
       fx:controller="com.faforever.client.login.LoginController">
-  <children>
-      <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-          <VBox alignment="CENTER" maxWidth="-Infinity" prefWidth="400.0" styleClass="login">
-              <children>
-                  <Text onMouseClicked="#onMouseClicked" strokeType="OUTSIDE" strokeWidth="0.0" text="">
-                      <VBox.margin>
-                          <Insets bottom="70.0" top="70.0"/>
-                      </VBox.margin>
-                      <styleClass>
-                          <String fx:value="login-logo"/>
-                          <String fx:value="icon"/>
-                      </styleClass>
-                  </Text>
-                  <VBox fx:id="loginProgressPane" alignment="CENTER" maxWidth="1.7976931348623157E308">
-                      <children>
-                          <JFXSpinner prefHeight="80.0" prefWidth="80.0"/>
-                          <Label text="%login.progress.message">
-                              <VBox.margin>
-                                  <Insets top="14.0"/>
-                              </VBox.margin>
-                          </Label>
-                          <Pane VBox.vgrow="ALWAYS"/>
-                          <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                                     onAction="#onCancelLoginButtonClicked" text="%login.button.cancel">
-                              <VBox.margin>
-                                  <Insets top="20.0"/>
-                              </VBox.margin>
-                          </JFXButton>
-                      </children>
-                  </VBox>
-                  <Label fx:id="loginErrorLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                         minHeight="0.0" minWidth="0.0" styleClass="hint"
-                         text="This error message is supposed to be long enough to test text wrapping" wrapText="true">
-                      <graphic>
-                          <Label styleClass="icon" text=""/>
-                      </graphic>
-                      <VBox.margin>
-                          <Insets bottom="5.0"/>
-                      </VBox.margin>
-                  </Label>
-                  <JFXButton fx:id="downloadUpdateButton" maxWidth="1.7976931348623157E308" minWidth="-Infinity"
-                             onAction="#onDownloadUpdateButtonClicked" prefHeight="50.0"
-                             style="-fx-background-color: -dimmed-accent;" text="%login.button.downloadUpdate">
-                      <VBox.margin>
-                          <Insets bottom="10.0"/>
-                      </VBox.margin>
-                  </JFXButton>
-                  <VBox fx:id="loginFormPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" spacing="5.0">
-                      <children>
-                          <JFXTextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
-                          <JFXPasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
-                          <HBox>
-                              <children>
-                                  <Label maxHeight="1.7976931348623157E308" minWidth="-Infinity"
-                                         text="%login.environment">
-                                      <HBox.margin>
-                                          <Insets right="10.0"/>
+    <children>
+        <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+            <VBox alignment="CENTER" maxWidth="-Infinity" prefWidth="400.0" styleClass="login">
+                <children>
+                    <Text onMouseClicked="#onMouseClicked" strokeType="OUTSIDE" strokeWidth="0.0" text="">
+                        <VBox.margin>
+                            <Insets bottom="70.0" top="70.0"/>
+                        </VBox.margin>
+                        <styleClass>
+                            <String fx:value="login-logo"/>
+                            <String fx:value="icon"/>
+                        </styleClass>
+                    </Text>
+                    <VBox fx:id="loginProgressPane" alignment="CENTER" maxWidth="1.7976931348623157E308">
+                        <children>
+                            <JFXSpinner prefHeight="80.0" prefWidth="80.0"/>
+                            <Label text="%login.progress.message">
+                                <VBox.margin>
+                                    <Insets top="14.0"/>
+                                </VBox.margin>
+                            </Label>
+                            <Pane VBox.vgrow="ALWAYS"/>
+                            <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                       onAction="#onCancelLoginButtonClicked" text="%login.button.cancel">
+                                <VBox.margin>
+                                    <Insets top="20.0"/>
+                                </VBox.margin>
+                            </JFXButton>
+                        </children>
+                    </VBox>
+                    <Label fx:id="loginErrorLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                           minHeight="0.0" minWidth="0.0" styleClass="hint"
+                           text="This error message is supposed to be long enough to test text wrapping"
+                           wrapText="true">
+                        <graphic>
+                            <Label styleClass="icon" text=""/>
+                        </graphic>
+                        <VBox.margin>
+                            <Insets bottom="5.0"/>
+                        </VBox.margin>
+                    </Label>
+                    <JFXButton fx:id="downloadUpdateButton" maxWidth="1.7976931348623157E308" minWidth="-Infinity"
+                               onAction="#onDownloadUpdateButtonClicked" prefHeight="50.0"
+                               style="-fx-background-color: -dimmed-accent;" text="%login.button.downloadUpdate">
+                        <VBox.margin>
+                            <Insets bottom="10.0"/>
+                        </VBox.margin>
+                    </JFXButton>
+                    <VBox fx:id="loginFormPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" spacing="5.0">
+                        <children>
+                            <JFXTextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
+                            <JFXPasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
+                            <HBox>
+                                <children>
+                                    <Label maxHeight="1.7976931348623157E308" minWidth="-Infinity"
+                                           text="%login.environment">
+                                        <HBox.margin>
+                                            <Insets right="10.0"/>
                                       </HBox.margin>
                                   </Label>
                                   <JFXComboBox fx:id="environmentComboBox" maxWidth="1.7976931348623157E308"
@@ -114,23 +116,30 @@
                                   <Insets top="20.0"/>
                               </VBox.margin>
                           </GridPane>
-                          <JFXCheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT"
-                                       maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                                       text="%login.autoLogin">
-                              <VBox.margin>
-                                  <Insets bottom="10.0" top="10.0"/>
-                              </VBox.margin>
-                          </JFXCheckBox>
-                          <JFXButton fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308"
-                                     mnemonicParsing="false" onAction="#onLoginButtonClicked"
-                                     text="%login.button.login"/>
-                          <HBox alignment="CENTER" spacing="10.0">
-                              <children>
-                                  <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308"
-                                             mnemonicParsing="false" onAction="#forgotLoginClicked" text="%login.forgot"
-                                             HBox.hgrow="ALWAYS"/>
-                                  <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308"
-                                             mnemonicParsing="false" onAction="#createNewAccountClicked"
+                            <VBox alignment="TOP_RIGHT" spacing="5.0">
+                                <children>
+                                    <JFXRadioButton fx:id="rememberNever" selected="true" text="%login.remember.never">
+                                        <toggleGroup>
+                                            <ToggleGroup fx:id="rememberGroup"/>
+                                        </toggleGroup>
+                                    </JFXRadioButton>
+                                    <JFXRadioButton fx:id="rememberShort" text="%login.remember.short"
+                                                    toggleGroup="$rememberGroup"/>
+                                    <JFXRadioButton fx:id="rememberLong" text="%login.remember.forever"
+                                                    toggleGroup="$rememberGroup"/>
+                                </children>
+                            </VBox>
+                            <JFXButton fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308"
+                                       mnemonicParsing="false" onAction="#onLoginButtonClicked"
+                                       text="%login.button.login"/>
+                            <HBox alignment="CENTER" spacing="10.0">
+                                <children>
+                                    <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308"
+                                               mnemonicParsing="false" onAction="#forgotLoginClicked"
+                                               text="%login.forgot"
+                                               HBox.hgrow="ALWAYS"/>
+                                    <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308"
+                                               mnemonicParsing="false" onAction="#createNewAccountClicked"
                                              text="%login.create" HBox.hgrow="ALWAYS"/>
                               </children>
                               <VBox.margin>
